# w3registrar

./: .gitignore  .keyfile.example  .neon_api_key.age  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.norg  config.example.toml  diesel.toml  docker-compose.yaml  dump.rdb  flake.nix  identity.scale  shell.nix
.github/workflows/: deploy-dev-docker.yaml  deploy-dev.yaml  deploy-prod-docker.yaml  deploy-prod.yaml  deploy-staging-docker.yaml  deploy-staging.yaml  deploy-www.yaml  deploy.yaml  postgres.yaml  release.yaml  security-review.yaml
challenger/: Cargo.toml  config.example.toml
challenger/src/: main.rs  matrix.rs
configs/: config.development.age  config.production.age  config.staging.age  recipients.txt
dockers/: docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-staging.yaml
docs/: ARCHITECTURE.md  remailer.md
examples/: alice_registration_test.rs  cloudflare_test.rs
metadata/: .gitattributes  people_kusama.scale  people_paseo.scale  people_polkadot.scale
migrations/2025-05-06-091739_created_tables/: down.sql  up.sql
migrations/2025-05-16-184723_store-public-keys-instead-ss58/: down.sql  up.sql
migrations/2025-05-17-045744_add-account-type/: down.sql  up.sql
scripts/: MULTISIG_SETUP.md  QUICKREF.md  account_state.sh  add-key.sh  add_registrar_proposal.md  concurrent.sh  deploy.sh  download-nsfw-model.sh  dummydata.sh  generate-key.sh  generate_registrar_proposal.ts  metadata.sh  modify_dummy.sh  package.json  setup_registrar_multisig.ts  stress.sh  test.sh  test_add_registrar.sh  test_local_registrar.ts  update-encrypted-configs.sh  verify.sh  zombienet.toml
src/: api.rs  chain.rs  common.rs  config.rs  db.rs  db_schema.sql  email.rs  indexer.rs  lib.rs  main.rs  matrix.rs  postgres.rs  rate_limit.rs  redis.rs  registry.rs  repo.rs  runner.rs  signer.rs  token.rs  watcher.rs  ws.rs
src/adapter/: cloudflare.rs  context.rs  dns.rs  github.rs  image.rs  mail.rs  matrix.rs  mod.rs  pgp.rs
src/adapter/email/: jmap.rs  mod.rs
src/adapter/email/jmap/: mod.rs
src/adapter/web/: dns.rs  http.rs  mod.rs
src/api/: http.rs  messages.rs  mod.rs  redis_subscriber.rs  server.rs  types.rs  validation.rs  ws.rs
src/chain/: api.rs  mod.rs  substrate.rs
src/challenger/: matrix.rs  mod.rs
src/config/: matrix.rs  mod.rs  redis.rs  watcher.rs  websocket.rs
src/db/: mod.rs  models.rs  schema.rs
src/node/: api.rs  events.rs  listener.rs  mod.rs  substrate.rs
src/node/chains/: kusama.rs  mod.rs  paseo.rs  polkadot.rs
src/watcher/: api.rs  mod.rs  watcher.rs
tests/: mod.rs  pgp_keyserver_test.rs  ratelimiter_test.rs
tests/generator/: README.md  __ini__.py  flake.nix  requirements.txt
w3r-macro/: Cargo.toml
w3r-macro/src/: lib.rs
watcher/: Cargo.toml  config.example.toml  metadata.scale
watcher/src/: main.rs  substrate.rs
www/: README.md  bun.lockb  package-lock.json  package.json  uno.config.ts
www/src/: App.tsx  app.tsx  data.ts  types.ts
www/src/components/: Card.tsx  ChallengeList.tsx  ChallengeVerification.tsx  CompletionPage.tsx  CountdownTimer.tsx  Header.tsx  IdentityForm.tsx  IdentityVerificationProcess.tsx  Input.tsx  Nav.tsx  NetworkDropdown.tsx  ProgressBar.tsx  UserDropdown.tsx
www/src/pages/: error-page.tsx  home.tsx
www/src/routes/: [...404].tsx  index.ts  index.tsx  support.tsx
