[package]
name = "w3registrar"
version = "0.4.9"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full", "signal"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
subxt = { version = "0.44.0" }
serde_json = "1.0.125"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["v4", "macro-diagnostics"] }
async-trait = "0.1.81"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
# Pulling matrix-sdk in from GitHub, as the latest stable crate causes a
# conflict with sqlx. Something to do with SQlite.
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "19e89bbd6a0df1c4a5636252b02b9e16cc7ab44d" }
matrix-sdk-crypto = "0.9.0" # fixes vulnerability tmp
tokio-stream = "0.1.16"
async-stream = "0.3.6"
sp-core = "38.0.0"
tokio-tungstenite = "0.26.0"
futures-util = "0.3.31"
subxt-signer = "0.44"
redis = { version = "0.29", features = ["connection-manager", "json", "tokio-comp", "uuid"] }
url = "2"
once_cell = "1.20"
tungstenite = "0.26.1"
strum = { version = "0.26", features = ["derive"] }
imap = "2.4.1"
native-tls = "0.2.12"
mail-parser = "0.10"
jmap-client = { version = "0.3.3", features = ["async"] }
regex = "1.11.1"
secstr = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
# hickory tls unstable, locking to trust-dns
trust-dns-resolver = { version = "=0.23.2", features = ["dns-over-rustls"] }
axum = "0.8.3"
reqwest = { version = "0.12.15", features = ["json"] }
sequoia-openpgp = {version = "2.0.0", default-features = false, features = ["compression", "crypto-openssl"]}
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.1"
openssl = "0.10.73"
postgres-types = { version = "0.2.9", features = ["derive"] }
mobc = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
