[package]
name = "w3registrar"
version = "0.4.9"
edition = "2021"
rust-version = "1.89"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full", "signal"] }
toml = "0.8.19"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
subxt = { version = "0.44.0" }
serde_json = "1.0.125"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["v4", "macro-diagnostics"] }
async-trait = "0.1.81"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
matrix-sdk = "0.14.0"
tokio-stream = "0.1.16"
async-stream = "0.3.6"
sp-core = "38.1.0"
tokio-tungstenite = "0.26.0"
futures-util = "0.3.31"
subxt-signer = "0.44"
redis = { version = "0.29", features = ["connection-manager", "json", "tokio-comp", "uuid"] }
url = "2"
once_cell = "1.20"
tungstenite = "0.26.1"
strum = { version = "0.26", features = ["derive"] }
imap = "2.4.1"
native-tls = "0.2.12"
mail-parser = "0.10"
regex = "1.11.1"
# hickory tls unstable, locking to trust-dns
trust-dns-resolver = { version = "=0.23.2", features = ["dns-over-rustls"] }
axum = "0.8.3"
reqwest = { version = "0.12.15", features = ["json"] }
sequoia-openpgp = {version = "2.0.0", default-features = false, features = ["compression", "crypto-openssl"]}
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-openssl = "0.5.1"
openssl = "0.10.73"
postgres-types = { version = "0.2.9", features = ["derive"] }
mobc = "0.9.0"

# Image verification dependencies
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
cid = "0.11"
# TODO: nsfw crate has dependency conflict with matrix-sdk (time version)
# nsfw = { version = "0.1", optional = true, default-features = false, features = ["jpeg", "png", "webp"] }

[features]
default = []
# nsfw-detection = ["nsfw"]  # disabled due to dependency conflict

[dev-dependencies]
pretty_assertions = "1.4.1"

[patch.crates-io]
parity-bip39 = { git = "https://github.com/rotkonetworks/rust-bip39" }


