[package]
name = "challenger"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.208", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.125"
tracing-subscriber = "0.3.18"
toml = "0.8.19"
matrix-sdk = "0.7.1"
